# crpg

./: .gitignore  AGENTS.md  README.md  TODO.md  bloodline.md  generate_maps.py  patch_latest.diff  project.godot  pyproject.toml  test_autoload_check.gd  test_autoload_check.gd.uid  test_combat_end.gd  test_combat_end.gd.uid  test_combat_end.tscn  test_combat_inventory.gd  test_combat_inventory.gd.uid  test_combat_inventory.tscn  test_combat_resolver.gd  test_combat_resolver.gd.uid  test_combat_resolver.tscn  test_combat_transition.gd  test_combat_transition.gd.uid  test_combat_transition.tscn  test_enemy_ai.gd  test_enemy_ai.gd.uid  test_enemy_ai.tscn  test_equipment.gd  test_equipment.gd.uid  test_equipment.tscn  test_movement.gd  test_movement.gd.uid  test_zoc.gd  test_zoc.gd.uid  test_zoc.tscn
crpg_project/: __init__.py  main.py
data/: backgrounds.json  bloodlines.json  chronicles_map.json  chronicles_silverhaven_samples.json  classes.json  flags.json  items.json  monsters.json  monsters_additional.json  monsters_session.json  political_factions.json  races.json  resources.json  savegame.json  session_config.json  settlements.json  terrain.json
docs/: bloodline.md  bloodlines_expansion.md  chronicles.md  data_guide.md  elf_races_data.md  plan.md  project_structure.md  races_data.md  research.md  research_full.md  scenario_A.md  scenario_B.md  scenario_C.md  uo_class_skill_analysis.md  uo_starting_items.md  word_export_guide.md  world_map.md  world_setting.md
scenes/: character_creation.tscn  enemy.tscn  main.tscn  scene_selector.tscn  session_setup.tscn
(+202 files in other folders)
